# Project-Argus

./: .cspell.json  .depcheck.json  .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .knip.json  .markdownlint.json  .tsprune.json  CHANGELOG.md  CLEANUP.staging  CLEANUP_MANIFEST.json  CLEANUP_RULES.md  CODEOWNERS  COMMIT_MESSAGE.txt  CRAWLEE_MCP_INTEGRATION_SUMMARY.md  CSPELL_DICTIONARY_FIX.md  CSPELL_IMPLEMENTATION.md  DATA_CONTRACT.md  DATA_QUALITY_REPORT.md  DAY2_OPS_HARDENING_SUMMARY.md  DEADCODE_CONSOLIDATION_SUMMARY.md  DEADCODE_REPORT.json  DIAGNOSIS.md  ESLINT_FIXES_SUMMARY.md  FINAL_VERIFICATION_SUMMARY.md  GA_LAUNCH_SUMMARY.md  HOWTO-RUN.md  IMPROVEMENTS_SUMMARY.md  INVENTORY.md  MAINTENANCE.md  OPS_REPORT.md  PATCH_NOTES.md  PRODUCTION_HARDENING_SUMMARY.md  PROVENANCE.json  README.md  REFACTORING_CHANGELOG.md  (+47 more)
.artifacts/pytest/: failure-test_from_raw_valid_complete_review.json  failure-test_invalid_schema_version.json  failure-test_schema_compliance_missing_fields.json
.artifacts/test-2025-08-28T03-46-05-042Z-w37q4n/: performance-Performance-Tests-Browser-Automation-Performance-should-handle-resource-blocking-efficiently.json  performance-Performance-Tests-Browser-Automation-Performance-should-simulate-scrolling-performance.json  performance-Performance-Tests-Concurrent-Processing-should-handle-multiple-concurrent-extractions.json  performance-Performance-Tests-Concurrent-Processing-should-limit-concurrent-browser-contexts.json  performance-Performance-Tests-Large-Dataset-Processing-should-efficiently-deduplicate-large-datasets.json  (+6 more)
.github/: dependabot.yml
apps/processor-python/processor-python/: pyproject.toml  pyrightconfig.json
apps/processor-python/processor-python/src/: __init__.py  cli.py  cx_map.py  etl.py  schema.py
apps/processor-python/processor-python/tests/: test_link_extractor.py
argus_ps_test_20250821_112547/: events.jsonl  package-lock.json  package.json  test_runner_v2.mjs
argus_ps_test_20250821_113907/: events.jsonl  package-lock.json  package.json  summary.json  test_runner_v3.mjs
argus_ps_test_20250821_114225/: events.jsonl  package-lock.json  package.json  summary.json  test_runner_v4.mjs
argus_ps_test_20250821_143336/: package-lock.json  package.json  test_runner.mjs
config/: cspell-words.txt
configs/: .env.example  orchestrator.yaml  processor.yaml  worker.config.json
data/: places.ndjson
datasets/: .gitkeep  reviews.ndjson
docs/: CLEANUP.md  REPORT.md  WORKSPACE.md  architecture.md  migration-guide.md  retry-example.md
export/: reviews.safe.jsonl
metrics/: perf.baseline.detail.json  perf.baseline.json  perf.check.txt  perf.spike.txt
node/: .eslintrc.js  package-lock.json
orchestrator-go/: go.mod
perf-spikes/: README.md  SPIKE-001-PREWARM-MCP.md  SPIKE-002-PANE-READY-HEURISTIC.md  TEMPLATE.md
processor-python/: main.py
py/: README.md  pyproject.toml  pytest.ini  schema.py
py/analysis/: requirements.txt
py/analysis/src/: __init__.py
py/ingest/: requirements.txt  run_ingest.ps1
py/ingest/processor_python/: api_client.py  cx_map.py  schema.py
py/ingest/processor_python/modules/: __init__.py  link_extractor.py
py/ingest/src/: __init__.py  dedup.py  processor.py  schema.py
py/src/processor_python/: etl.py  schema.py
py/src/processor_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
py/tooling/: python-dev-requirements.txt  validate-python-tooling.py
python/: README.md  cx_map.py  pyproject.toml
python/src/: cli.py
python/src/argus_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/src/processor_python/: __init__.py  cli.py  etl.py  schema.py
python/src/processor_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/processor_python/quality/: __init__.py  gates.py  types.py
python/tests/: test_link_extractor.py
ref/: Project Argus Master Scraper.js
sbom/: combined.cdx.json  sbom._argus_e2e.cdx.json
schemas/: review.schema.json
scripts/: audit.mjs  clean-build-run.ps1  cleanup.ts  dev.sh  manual-test-suite.ps1  python-check.ps1  release.ps1  rollback.ps1  run_orchestrator.sh  seed_demo.sh  setup-python-tools.ps1  test-runner.ps1  test-suite.ps1  verify-release.ps1
tests/: conftest.py  jest.config.test.js  setup.ts
tools/: doctor.mjs  inventory.js
userscript/: argus.user.js
worker-node/: .eslintrc.js  package.json
(+319 files in other folders)
