[project]
name = "processor-python"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "black", "isort"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
extend-select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
namespace_packages = true
mypy_path = ["ingest/src"]
exclude = ["build/", "dist/", "venv/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["ingest/src"]
