[project]
name = "processor-python"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "pydantic>=2", "pandera>=0.18"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "black", "isort"]
test = [
    "pytest>=7.0",
    "pandas>=2.2; python_version>='3.9'",
    "pandas>=1.5; python_version<'3.9'"
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
extend-select = ["E", "F", "I"]
ignore = ["E501"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
# Point to venv if using .venv local
venvPath = "."
venv = ".venv"
extraPaths = ["src", "ingest/src"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
namespace_packages = true
mypy_path = ["ingest/src"]
exclude = ["build/", "dist/", "venv/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "ingest/src"]
