[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "pydantic>=2"]

[project.optional-dependencies]
dev = ["basedpyright>=1.30.0", "pytest", "pandas-stubs"]

[tool.setuptools]
package-dir = {"" = "python/src"}

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
executionEnvironments = [
  {root = "./python", extraPaths = ["./python/src"]},
  {root = ".", extraPaths = ["./python/src"]}
]
