[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processor-python"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["basedpyright>=1.30.0", "pytest", "pandas-stubs>=2.0", "pydantic>=2.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.basedpyright]
typeCheckingMode = "strict"
reportExplicitAny = "warning"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportMissingParameterType = "error"
reportUnusedCallResult = "warning"
reportDeprecated = "warning"

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
