[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-processor-python"
version = "0.1.0"
description = "Argus Python data processor"
dependencies = [
    "pandas>=1.5.0",
    "jsonschema>=4.0.0"
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v"
